# botmon_cli

./: Cargo.toml  LICENSE
src/: app.rs  app_params.rs  bot_stats.rs  dynamo.rs  error.rs  leo_config.rs  lib.rs  main.rs
src/pages/: bot.rs  bus_select.rs  mod.rs  queue.rs
src/ui/: bot.rs  bus_select.rs  chart.rs  current_state.rs  loading.rs  main.rs  mod.rs  queue_select.rs
